--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>Chat Online</title>
     <meta name="author" content="Szymon Gniadek">
 
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="styles/main.css">
 
     <script src="main.js" type="module" defer></script>
 </head>
